syntax = "proto3";

package goomerang.test;
option go_package = "test/";

message PingPong {
  string message = 1;
}

message GreetV1 {
  string message = 1;
}