syntax = "proto3";

import "google/protobuf/timestamp.proto";

package goomerang.protocol;
option go_package = "go.eloylp.dev/goomerang/internal/protocol";

message Frame {
  string uuid = 1;
  string type = 2;
  bool is_rpc = 3;
  google.protobuf.Timestamp creation = 4;
  map<string, string> headers = 5;
  bytes payload = 6;
}